docs: 백준 풀이 - MST

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -737,8 +737,7 @@ BFS는 최단거리에 자주 사용하고, DFS는 그래프나 트리에서 주
     
       * 가중치가 0과 1로 이루어진 특수 환경에서 사용
       * deque 사용
-      * 이건 따로... 공부합시다...
-      * https://nicotina04.tistory.com/168
+      * **참고 -> [숨바꼭질 3 풀이](https://bh946.github.io/baekjoontest/(java)%EC%88%A8%EB%B0%94%EA%BC%AD%EC%A7%88-3-%EB%B0%B1%EC%A4%8013549/)**
 
 
 <br>
