--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -66,13 +66,24 @@ typora-root-url: ../../..
   // 조합 nCm
   static void comb(int depth, int idx) {
   }
+  // 중복조합
+  static void combDup(int depth, int idx) {
+    if(depth == M) {
+      // 중복조합 생성 완료
+    }
+    for(int i=1; i<=N; i++) {
+      outArr[depth] = i;
+      comb(depth+1, i); // 이 차이밖에 없음. 한끗차이
+    }
+  }
   // 참고) 조합 또다른 방식
   //comb(depth+1, idx+1); // 현재 선택 OK 다음 자리 이동
   //comb(depth, idx+1); // 현재 선택 X
-
 /**
- * 부분집합 : nC0+nC1+...+nCn 즉, 조합과 유사 ("있다 or 없다") 경우의 수 -> visited의 T/F 에 재귀 2개
+ * 부분집합 : aC0+aC1+...+aCa 즉, 조합과 유사 ("있다 or 없다") 경우의 수 -> visited의 T/F 에 재귀 2개
  */
+  static int A = 5;
+  static boolean[] visited2 = new boolean[A + 1];
   static void subset(int depth) {
   }
 ```
@@ -95,6 +106,8 @@ typora-root-url: ../../..
 /**
  * 플로이드 : 모든정점->모든정점 최단경로
  * 반드시 기억 : 3중 for문(k부터) + new 인접행렬
+[백준13418](https://www.acmicpc.net/problem/13418) 의 경우 "오르막길(최악)", "내리막길(최선)"을 각각 1, 0으로 임의로 입력받고,  
+임의로 입력받은 간선을 "오름차순, 내림차순"으로 따로 정렬후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
  */
   public static void floyd(){
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
@@ -353,6 +366,7 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
 /**
  * 플로이드 : 모든정점->모든정점 최단경로
  * 반드시 기억 : 3중 for문(k부터) + new 인접행렬
+ * output:10
  */
   public static void floyd(){
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
@@ -388,6 +402,7 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
  * 다익스트라 : 1개정점->모든정점 최단경로
  * 반드시 기억 : 우선순위 큐(도착점, 도착비용) + new 거리배열
  * +++ 최단거리 배열과 현재 도착거리 다르면 PASS(예외)
+ * output:10
  */
   public static void dijkstra() {
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
@@ -455,6 +470,12 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
 /**
  * 프림 : MST -> 최소 비용 정점을 선택해 나가는 방식
  * 반드시 기억 : 우선순위 큐 + cnt + visited (중복 방지 필수)
+ * output:8 -> [백준13418](https://www.acmicpc.net/problem/13418)
+debug -> outArr1, outArr2
+[Pair2{child=0, cost=0}, Pair2{child=1, cost=1}, Pair2{child=2, cost=0}, Pair2{child=4, cost=0}, Pair2{child=3, cost=0}]
+[Pair2{child=0, cost=0}, Pair2{child=1, cost=1}, Pair2{child=2, cost=0}, Pair2{child=4, cost=1}, Pair2{child=3, cost=1}]
+ * 피로도 : 오르막길 k^2, 내리막길은 피로도X
+ * 출발은 항상 입구(=0) 부터
  */
   public static void prim() {
     // 최악경로 비용과 최선경로 비용의 차이를 구하라.
@@ -485,28 +506,31 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
     }
     //1.최선경로비용
     boolean[] visited = new boolean[N+1];
-    pq1.offer(new Pair2(0, 0)); // 0번 정점부터 시작(cost:0으로써 임의의 시작점일뿐)
+    pq1.offer(new Pair2(0, 0)); // 입구(=0)부터 시작이고 비용도 0으로 봐야한다.
     int idx=0;
-    while(!pq1.isEmpty()){
+	// visited 방문처리를 "큐 삽입시점" 아니라 "큐 poll 시점" 에 하기 때문에,
+    // 큐에는 중복으로 또 같은 값이 삽입되는 경우가 생긴다.
+    // 따라서 !pq.isEmpty() 가 아닌 cnt <= N 조건문을 사용하여 "시간을 최적화" 한다.
+    while (cnt <= N) {
       Pair2 cur = pq1.poll();
-      if(visited[cur.child]) continue;
-      visited[cur.child]=true; // 새로운 정점을 MST에 추가
+      if(visited[cur.child]) continue; // 이미 MST 선택되었나 방문체크는 필수
+      visited[cur.child]=true; //방문시점 -> MST 선택 시점
       outArr1[idx++] = cur;
       for(Pair2 nxt : graph[cur.child]) {
-        if(visited[nxt.child]) continue;
-        pq1.offer(nxt); // 큐 삽입 시점
+        if(visited[nxt.child]) continue; // 이부분 없어도 잘 동작하지만 조금이라도 "시간을 최적화" 위함
+        pq1.offer(nxt); //큐 삽입시점
       }
     }
     int result1=0;
-    for(int i=1; i<idx; i++){
-      if(outArr1[i].cost == 1) continue; // 1은 내리막길
+    for(int i=1; i<idx; i++){ // 입구 이후부터니까 i=1 부터
+      if(outArr1[i].cost == 1) continue; // 1은 내리막길 -> PASS
       result1 += 1; // 오르막길 개수 추가
     }
     //2.최악경로비용
     visited = new boolean[N+1];
     pq2.offer(new Pair2(0, 0)); // 0번 정점부터 시작(cost:0으로써 임의의 시작점일뿐)
     idx=0;
-    while(!pq2.isEmpty()){ // 특히 양방향이라 노드선택 엄격히
+    while (cnt <= N) {
       Pair2 cur = pq2.poll();
       if(visited[cur.child]) continue;
       visited[cur.child]=true;
@@ -533,6 +557,7 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
 /**
  * 크루스칼 : MST -> 간선 가중치를 비내림차순 정렬 후 순서대로 선택하는 방식
  * 반드시 기억 : 정렬 + Union find
+ * output:8
  */
   public static void kruskal() {
     // 최악경로 비용과 최선경로 비용의 차이를 구하라.
@@ -540,68 +565,67 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
     int M = 5;
     int[][] input = {%raw%}{{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}}{%endraw%};
     //...
-    List<Pair3> edges1 = new ArrayList<>();
-    List<Pair3> edges2 = new ArrayList<>();
-    Pair3[] outArr1 = new Pair3[N+1];
-    Pair3[] outArr2 = new Pair3[N+1];
-    for(int i=0; i<M+1; i++){ // 입력정점
-      int parent = input[i][0];
-      int child = input[i][1];
+    edges = new Pair3[M + 1]; // M+1 크기
+    parent = new int[N + 1];
+    outArr1 = new Pair3[N + 1];
+    outArr2 = new Pair3[N + 1];
+    for (int i = 0; i < M + 1; i++) {
+      int n1 = input[i][0];
+      int n2 = input[i][1];
       int cost = input[i][2];
-      edges1.add(new Pair3(parent,child,cost)); //최악경로비용
-      edges2.add(new Pair3(parent,child,cost)); //최선경로비용
+      edges[i] = new Pair3(n1, n2, cost);
     }
-    Collections.sort(edges1, (o1, o2) -> Integer.compare(o1.cost, o2.cost)); //asc
-    Collections.sort(edges2, (o1, o2) -> Integer.compare(o2.cost, o1.cost)); //desc
     //1.최악경로비용
-    Arrays.fill(p, -1);
-    int idx=0;
-    for(Pair3 edge : edges1){
-      if(isUnion(edge.parent, edge.child)) continue;
+    // 에지 정렬부터
+    Arrays.sort(edges, 0, M+1, (o1, o2) -> Integer.compare(o1.cost, o2.cost)); //asc
+    Arrays.fill(parent, -1);
+    int idx = 0;
+    for (Pair edge : edges) {
+      if(isUnion(edge.n1, edge.n2)) continue; // 집합이면 PASS
       outArr1[idx++] = edge;
-//      if(idx==N) break; //입구 포함이므로(0포함), 간선 개수가 N
-    }
-    int result1=0;
-    for(int i=0; i<idx; i++){ // i=0부터
-      if(outArr1[i].cost == 1) continue; // 1은 내리막길
-      result1 += 1; // 오르막길 개수 추가
     }
     //2.최선경로비용
-    Arrays.fill(p, -1);
-    idx=0;
-    for(Pair3 edge : edges2){
-      if(isUnion(edge.parent, edge.child)) continue;
+    Arrays.sort(edges, 0, M+1, (o1, o2) -> Integer.compare(o2.cost, o1.cost)); //desc
+    Arrays.fill(parent, -1);
+    idx = 0;
+    for (Pair edge : edges) {
+      if(isUnion(edge.n1, edge.n2)) continue; // 집합이면 PASS
       outArr2[idx++] = edge;
-//      if(idx==N) break; //입구 포함이므로(0포함), 간선 개수가 N
+    }
+    //output
+    int result1=0;
+    for(int i=0; i<idx; i++){ // 입구 이후부터니까 i=1 부터
+      if(outArr1[i].cost == 1) continue; // 1은 내리막길 -> PASS
+      result1 += 1; // 오르막길 개수 추가
     }
     int result2=0;
-    for(int i=1; i<idx; i++){ // i=0부터
+    for(int i=0; i<idx; i++){
       if(outArr2[i].cost == 1) continue; // 1은 내리막길
       result2 += 1;
     }
     System.out.println((int)(Math.pow(result1,2)-Math.pow(result2,2))); //8
   }
-  static int[] p = new int[5]; //부모배열 기록
-  static boolean isUnion(int u, int v){
-    u = find(u); v = find(v); // root노드 찾기
-    if(u==v) return true; // 합집합(부모같으니까)
-    if(p[u] > p[v]) { // 하나의 집합으로 합치려는 의도일 뿐
-      int temp = u;
-      u=v; v=temp;
-    } // swap
-    p[u] += p[v]; // 자식이 많은쪽에 merge
-    p[v] = u; // 부모 기록
+
+  static boolean isUnion(int n1, int n2) {
+    n1 = find(n1); n2 = find(n2); // root 찾기
+    if(n1==n2) return true; // 합집합(부모 동일하므로)
+    if (parent[n1] > parent[n2]) { // n2 부모가 제일 자식이 많다면,
+      int temp = n1;
+      n1 = n2; n2 = temp;
+    } //swap
+    parent[n1] += parent[n2]; // 자식이 많은쪽에 merge -> 하나의 집합으로 합치려는 의도
+    parent[n2] = n1; // 부모기록
     return false;
   }
-  static int find(int x){
-    if(p[x] < 0) return x; //-1은 자신이 부모
-    return p[x] = find(p[x]); //root 까지 재귀
+  static int find(int x) {
+    if(parent[x] < 0) return x; // -1 은 초기값 (자기 자신이 부모)
+    return parent[x] = find(parent[x]); // root 까지 재귀
   }
 
   static class Pair3 {
-    int parent; int child; int cost;
-    public Pair3(int parent, int child, int cost){
-      this.parent=parent; this.child=child; this.cost=cost;
+    int n1; int n2; int cost;
+    public Pair(int n1, int n2, int cost) {
+      this.n1=n1; this.n2=n2; this.cost=cost;
     }
   }
 ```
