--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1813,6 +1813,7 @@ static int dfs(int x, int y){
     EX : `(표시없는길 개수)/(표시1번 지난길 개수)/(표시2번 지난길 개수)` 
   
 * **거스름돈**
+  
   * `C[i][j] = min( C[i, j–D[i]] + 1, C[i-1, j] )	,if D[i]<=j`  
     `C[i][j] = C[i-1][j]	,if D[i]>j`  
     `C[i][j] = 0	,if j==0`
@@ -1855,9 +1856,13 @@ static int dfs(int x, int y){
     * 다만, 이와 해당된 문제를 풀어본적이 없어서 **그냥 개념만 이해하고 넘어간다.**
 
 * **0-1 Knapsack(BOJ12865)**
+  
   * `max( P[i-1][w], pi + P[i-1][w-wi] )	,if wi<=w`  
     `P[i][w] = P[i-1][w]	,if wi>w`
-
+  * 단, top-bottom 으로 넘어가면 "연산량"을 줄일 수 있지 근본적인 "메모리 문제"가 있을경우 이를 해결한다는게 아님. 착각X
+    * 따라서 **냅색 문제 메모리 초과**일 것 같을때 해당 문제 조건만 보지말고 **다른 방향의 풀이** 생각!
+    * 참고(심화) 문제 -> [앱_7579](https://www.acmicpc.net/problem/7579)
+  
 * **프리랜서의 일정 정하기(SWEA4052)**
   * `OPT[j] = max ( OPT[j-1], w[j] + OPT[p(j)] )`
     * OPT[j-1] : 일정 j 선택X
