--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -199,6 +199,17 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
     int en = N-1;
 	// ...
 }
+/**
+추가) 응용ver -> 백준2473 - 세 용액 -> 이해안되면 문제를 읽어볼것
+ * 이전의 "용액" 문제와의 차이점은 mid 값을 사용하는게 아닌 st, en 값을 사용해서 3개 값을 찾는다.
+ * 그런데 mid 값을 사용하는게 아니다보니 이분탐색 이라기보단
+ * 그냥 "투포인터"로 보는게 맞는것 같다?
+ */
+for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
+    int st = i+1;
+    int en = N-1;
+    // ...
+}
 ```
 
 <br><br>
@@ -696,6 +707,28 @@ for (int i = 0; i < N; i++) { // NlogN 복잡도
         if(temp < 0) st = mid+1;
         else if(temp > 0) en = mid-1;
         else break; // temp == 0 을 찾은것
+    }
+}
+/**
+추가) 응용ver -> 백준2473 - 세 용액 -> 이해안되면 문제를 읽어볼것
+ * 이전의 "용액" 문제와의 차이점은 mid 값을 사용하는게 아닌 st, en 값을 사용해서 3개 값을 찾는다.
+ * 그런데 mid 값을 사용하는게 아니다보니 이분탐색 이라기보단
+ * 그냥 "투포인터"로 보는게 맞는것 같다?
+ */
+for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
+    int st = i+1;
+    int en = N-1;
+    while (st < en) {
+        long temp = inArr[i] + inArr[st] + inArr[en]; // i, st, en 순서 인덱스
+        if (sum > Math.abs(temp)) { // "크기" 를 비교하므로 절대값
+            sum = Math.abs(temp);
+            outArr[0] = inArr[i];
+            outArr[1] = inArr[st];
+            outArr[2] = inArr[en];
+        }
+        if(temp < 0) st++;
+        else if(temp > 0) en--;
+        else break; // temp==0
     }
 }
 ```
