docs: 최근 포스팅 수정

--- a/_posts/Coding_Test/Baekjoon_Test/2024-03-09-(java)스택 수열 - 백준1874.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2024-03-09-(java)스택 수열 - 백준1874.md
@@ -14,7 +14,7 @@ typora-root-url: ../../..
 
 ## 문제
 
-* **[스티커(백준9465)](https://www.acmicpc.net/problem/9465)**
+* **[스택 수열(백준1874)](https://www.acmicpc.net/problem/1874)**
 
 <br><br>
 
@@ -22,26 +22,20 @@ typora-root-url: ../../..
 
 **문제 해석을 하자면,**
 
-* 2n개의 스티커 중에서 점수의 합이 최대가 되면서 **서로 변을 공유 하지 않는** 스티커 집합을 구해야 한다.
+* 입력으로 주어지는 수열의 형태를 만들 수 있냐는 문제이다.
+  * 단, 1~n 까지 수를 스택에 넣었다가 뽑아서 만들어야한다.
+  * 예로 4를 만들어야 하면 1~4까지 스택에 넣어야 하니 push가 4번이고, pop 1번으로 만들 수 있다.
+
 
 <br>
 
 **풀이**
 
-* 브루트포스로 구현하기도 복잡하며, N 범위가 너무 크기 때문에 동적프로그래밍으로 접근한다.
+* 1부터 n까지 ++할 변수 `cnt` 를 따로 선언한다. `input` 은 입력 값으로 가정한다.
+* while? **cnt < input** 인 경우 "cnt==input" 이 될때까지 push 를 한다. (cnt==input 인 값까지 push)
+* while? **스택top==input** 인건 전부 pop 를 한다.
+  * 참고) 스택이 혹시나 비어 있을 수 있으므로 `!st.isEmpty()` 먼저 체크
 
-* DP 점화식 -> 아래 그림 참고
-
-  * ```java
-    dp[0][i] = Math.max(dp[1][i - 1] + inArr[0][i], dp[1][i - 2] + inArr[0][i]);
-    dp[1][i] = Math.max(dp[0][i - 1] + inArr[1][i], dp[0][i - 2] + inArr[1][i]);
-    ```
-
-<br>
-
-**점화식 구하는 과정**
-
-<img src="https://github.com/BH946/bh946.github.io/assets/80165014/59ad1ae2-4024-4eb2-b2a4-56980554d2f2" alt="image" style="zoom: 33%;" /> 
 
 <br><br>
 
@@ -49,36 +43,30 @@ typora-root-url: ../../..
 
 ```java
 public static void main(String[] args) throws IOException {
-    StringBuilder sb =new StringBuilder();
+    StringBuilder sb = new StringBuilder();
     BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
-    int T = Integer.parseInt(br.readLine());
-    for (int t = 0; t < T; t++) {
-        int N = Integer.parseInt(br.readLine());
-        int[][] inArr = new int[2][N + 1];
-        StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
-        for (int i = 0; i < N; i++) {
-            inArr[0][i] = Integer.parseInt(stk.nextToken());
-        }
-        stk = new StringTokenizer(br.readLine(), " ");
-        for (int i = 0; i < N; i++) {
-            inArr[1][i] = Integer.parseInt(stk.nextToken());
-        }
+    int N = Integer.parseInt(br.readLine());
+    Deque<Integer> st = new ArrayDeque<>();
+    int cnt = 1; //1~n
+    for (int i = 0; i < N; i++) {
+        int input = Integer.parseInt(br.readLine());
         //run
-        //dp init
-        int[][] dp = new int[2][N + 1];
-        dp[0][0] = inArr[0][0];
-        dp[1][0] = inArr[1][0];
-        dp[0][1] = inArr[1][0]+inArr[0][1];
-        dp[1][1] = inArr[0][0]+inArr[1][1];
-        //dp
-        for (int i = 2; i < N; i++) {
-            dp[0][i] = Math.max(dp[1][i - 1] + inArr[0][i], dp[1][i - 2] + inArr[0][i]);
-            dp[1][i] = Math.max(dp[0][i - 1] + inArr[1][i], dp[0][i - 2] + inArr[1][i]);
+        while (cnt <= input) { // input 까지 cnt++ 삽입
+            st.push(cnt++);
+            sb.append("+").append("\n");
         }
-        //output
-        sb.append(Math.max(dp[0][N - 1], dp[1][N - 1])).append("\n");
+        // 스택이 혹시나 null 일 수 있으므로 !st.isEmpty() 먼저 체크
+        while (!st.isEmpty() && st.peek() == input) { // input 과 동일한건 pop
+            st.pop();
+            sb.append("-").append("\n");
+        }
+
     }
-    System.out.println(sb);
+    //output
+    if (!st.isEmpty())
+        System.out.println("NO");
+    else
+        System.out.println(sb);
 }
 ```
 
