docs: 백준 풀이 및 암기할 내용 추가

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -240,7 +240,8 @@ typora-root-url: ../../..
 
 - EX11) 2차원 배열에서 동일한 행,열 뿐만아니라 **"대각선" 유무 알아낼 때**
 
-  - `Math.abs(col[rowNo]-col[k]) == rowNo-k` : 열값차이와 행값차이가 같다면 **"대각선"**
+  - `Math.abs(p.x - nx) == Math.abs(p.y - ny)` : 행차이와 열차이가 같다면 **"같은 대각선 상에 존재"**
+  - 대표로 [N-Queen](https://www.acmicpc.net/problem/9663) 문제 참고!!
 
 - EX12) 참고 : 중위 표기식 -> 후위 표기식 변환법과 후위 표기식 계산방법
 
