--- a/_posts/Knowledge/Knowledge/2022-08-05-도메인 등록, SEO, 구글 애널리틱스 사용법.md
+++ b/_posts/Knowledge/Knowledge/2022-08-05-도메인 등록, SEO, 구글 애널리틱스 사용법.md
@@ -13,6 +13,16 @@ typora-root-url: ../../..
 
 
 
+## Intro
+
+웹 호스팅에 naver.com 처럼 별명을 붙여주는 "도메인"에 관해 살펴보고(+Favicon), 
+
+구글, 네이버 등에서 "검색 엔진" 동작 방식과 우리의 웹을 "검색에 등록" 하는 법을 살펴본다.
+
+마지막으로 "구글 애널리틱스"로 웹 트래픽 확인을 살펴보자.
+
+<br><br>
+
 ## 도메인?
 
 휴대폰의 연락처 목록에서 휴대폰의 번호에 맞는 연락처를 찾아서 전화 통화를한다. 이런 느낌이다.
@@ -35,7 +45,7 @@ typora-root-url: ../../..
 
 ## 도메인 등록
 
-이벤트 중인 [도메인_cafe24](https://hosting.cafe24.com) 또는 [도메인_gabia](https://www.gabia.com/) 에서 등록하겠다
+이벤트 중인 [도메인_cafe24](https://hosting.cafe24.com) 또는 [도메인_gabia](https://www.gabia.com/) 에서 등록하는 예시를 보여주겠다.
 
 * 회원가입 하기
 * 도메인 검색해보면 `.shop` 도메인이라고 이벤트가 550원(부가세포함, 1년) 이 있으므로 추천!
@@ -46,8 +56,8 @@ typora-root-url: ../../..
 
 <br>
 
-`netlify` 에 https로 보안을 해준다던지, 간단한 호스팅 등등 기능이 좀 많기 때문에 `gabia`에서 도메인 등록후  
-`netlify` 에 도메인 연결해둬서 사용하겠다!
+`netlify` 에 https로 보안을 해준다던지, 간단한 호스팅 등 기능이 좀 많기 때문에 `gabia`에서 도메인 등록후  
+`netlify` 에 도메인을 연결해서 사용하겠다! (즉, netlify호스팅+gabia도메인)
 
 * DNS관리 창에서 수정하던지, 처음에 구매할때 타사 도메인에서 `netlify` 입력하면 된다.
 * `netlify` 등록은 [netlify](https://www.netlify.com/) 여기서 회원가입을 한다. 그리고 test용 html파일 올려주면
@@ -124,7 +134,7 @@ typora-root-url: ../../..
 
 **따라서 `robot.txt, sitemap.xml` 을 잘 수정하면 좀 더 검색이 잘 될 수 있다.**
 
-<br>
+<br><br>
 
 ### Naver
 
@@ -138,16 +148,38 @@ typora-root-url: ../../..
 `robot.txt` 를 수정해 보겠다.
 
 * 검색 로봇을 모든 검색로봇으로 해야, 구글 봇, 다음 등등 에서 검색이 될것이다.
-* 그리고 다운을 받아서 index.html 폴더에 같이 두자
+* 그리고 다운을 받아서 index.html 폴더에 같이 두자 (루트폴더) -> 본인 서버에 올려라는 것
 
 ![image-20220805191523727](/images/2022-08-05-도메인, SEO 사용법/image-20220805191523727.png)
 
 <br>
 
-`sitemap.xml` 도 다운받아서 같이 서버에 올려보겠다.
+`sitemap.xml` 도 다운받아서 같이 서버에 올려보겠다. -> 이 또한 위치는 root 폴더로
 
 * [sitemap](https://www.xml-sitemaps.com) 사이트에서 본인 도메인 입력후 start하고 다운을 받는다.
-* 이 또한 root폴더에 같이 둔다.
+
+* 또는 직접 파일을 만들어서 아래코드를 복붙해도 좋다.
+
+* ```xml
+  ---
+  layout: null
+  ---
+  <?xml version="1.0" encoding="UTF-8"?>
+  <urlset xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9 http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd"
+          xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+      {% for post in site.posts %}
+      <url>
+          <loc>{{ site.url }}{{ post.url }}</loc>
+          {% if post.lastmod == null %}
+          <lastmod>{{ post.date | date_to_xmlschema }}</lastmod>
+          {% else %}
+          <lastmod>{{ post.lastmod | date_to_xmlschema }}</lastmod>
+          {% endif %}
+      </url>
+      {% endfor %}
+  </urlset>
+  ```
 
 <br>
 
@@ -182,27 +214,29 @@ typora-root-url: ../../..
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192829094.png" alt="image-20220805192829094" style="zoom:80%;" />
 
-<br>
+<br><br>
 
 ### Google
 
 구글에서 검색되게 하겠다. 사이트 : [googlesearch](https://search.google.com/search-console/about)
 
-**자신의 도메인을 입력하면 된다.**
+**자신의 도메인을 입력하면 된다. (일반 깃블로그나 다른 블로그면 URL 접두어로)**
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193406764.png" alt="image-20220805193406764" style="zoom: 80%;" />
 
 <br>
 
-**그리고 소유권 주장을 성공해야 한다.**
+**그리고 소유권 주장을 성공해야 한다.(DNS방법 말고도 html, 태그 등 방식은 많음)**
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193817423.png" alt="image-20220805193817423" style="zoom: 80%;" />
 
 <br>
 
-`netlify`에서 **Go to DNS panel** 로 접근하면 DNS 레코드를 설정할 수 있다.
+`netlify`에서 **Go to DNS panel** 로 접근하면 DNS 레코드를 설정할 수 있다. 따라서 여기서 위의 소유권 주장에 맞춰서 인증하면 된다.
 
-* 따라서 여기서 위의 소유권 주장에 맞춰서 인증하면 된다.
+만약에 html 방식이면? root폴더에 html을 배치하면 되고, 태그방식이면? head파일에 태그를 배치하면 된다. 
+
+이런식으로 소유권 주장이 필요하다고만 알면 된다. 어렵지 않다.
 
 ![image-20220805193712424](/images/2022-08-05-도메인, SEO 사용법/image-20220805193712424.png)
 
@@ -214,19 +248,21 @@ typora-root-url: ../../..
 
 그리고 `sitemap.xml` 을 설정한다
 
-* 이미 서버에 네이버 할때 올렸으니 해당 파일 URL을 입력해서 제출!
+* 이미 네이버에 등록할때 xml파일을 서버에 올렸었으니 해당 파일 URL을 입력해서 바로 제출!
 
 ![image-20220805194126821](/images/2022-08-05-도메인, SEO 사용법/image-20220805194126821.png)
 
-`robots.txt` 는 따로 설정하는 부분이 안보이는데, 아마 자동으로 등록 된것일거다.
+`robots.txt` 는 설정 탭에 보면 볼 수 있고, 아마 자동으로? 등록되었던것 같다. 
+
+물론, 서버에는 robots.txt를 올려놔야한다. sitemap.xml 이랑 똑같이 배치하면 된다.
 
 <br><br>
 
 ## SEO - 검색 엔진 최적화
 
-구글 SEO 설명 사이트 : [구글SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=ko)
+구글 SEO 공식 사이트 : [구글SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=ko)
 
-네이버 SEO 설명 사이트 : [네이버SEO](https://searchadvisor.naver.com/guide/seo-basic-intro)
+네이버 SEO 공식 사이트 : [네이버SEO](https://searchadvisor.naver.com/guide/seo-basic-intro)
 
 => 해당 사이트대로 하면 된다.
 
@@ -242,7 +278,7 @@ typora-root-url: ../../..
     예로 \<h1>은 제목을 적는다던지 그런식으로 코드를 작성해줘야 SEO에 유리
   * 메타 태그 : html의 head부분에 meta태그를 넣어서 이것 저것 설명하는 부분이라 볼 수 있다.  
     즉, \<h1>의 제목과, meta태그의 설명에서 제목과, \<title>의 제목 등등 겹치는게 많으면 SEO에 유리한 것이다.
-* SEO가 잘 되었는지 확인해주는 사이트 : [SEO CHECK](https://seositecheckup.com/)
+* SEO가 잘 되었는지 확인해주는 사이트 : [SEO CHECK](https://seositecheckup.com/), [이 사이트는 공짜](https://pagespeed.web.dev/)
   * 점수도 알려주고, 무엇을 더 수정해야할지도 알려준다!
   * 꿀팁 : 돈내라고 로그인하라고 뜨는데 개발자 모드에서 해당부분 Delete해주면 지우고 볼 수 있음!!
 
@@ -272,20 +308,13 @@ typora-root-url: ../../..
 
 ## 마무리
 
-마무리하자면
+`netlify` 로 처음에 호스팅을(일정 용량까지 무료!) 하였고 여기에도 도메인을 팔지만, 필자는 도메인을 `gabia` 에서 결제했기 때문에 이를 `netlify`로 연결하였다.
 
-`netlify` 로 처음에 호스팅을(일전 용량까지 무료!) 하였고 여기에도 도메인을 팔지만, 필자는 도메인을 `gabia` 에서 결제했기 때문에 `netlify`로 연결하였다.
+참고로 `호스팅`은 홈페이지에 보이는 모든 콘텐츠의 실제 저장 공간이라 생각해도 좋다. (애매하긴 하다)
 
-참고로 `호스팅`은 홈페이지에 보이는 모든 콘텐츠의 실제 웹 저장 공간이다.
-
-* `호스팅` 또한 결제해야 하며, `gabia, cafe24 등등` 에 다 존재한다.
+* `호스팅` 또한 결제해야 하며, `gabia, cafe24 등` 에 다 존재한다.
 
 * `filezilla` 같은 FTP앱과 연동해서 사용하고 싶다면 `호스팅`을 결제해서 사용해야한다.
 
-* 아마도 `netlify`는 FTP와 연동이 안되는것 같다.
-
-
-<br>
-
-즉, `호스팅 + 도메인` 으로 하나의 홈페이지를 만들수 있는것이다.
+* 아마도 `netlify`는 FTP와 연동이 안되는것 같다. (?)
 
