--- a/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기(상단바, 사이드바) - 깃 블로그 TIP 4.md
+++ b/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기(상단바, 사이드바) - 깃 블로그 TIP 4.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] 카테고리와 목차 추가하기 - 깃 블로그 TIP 4"
+title:  "[Blog] 카테고리와 목차 추가하기(상단바, 사이드바) - 깃 블로그 TIP 4"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
