--- a/_posts/etc/Blog/2024-04-29-(Blog) 블로그 내 글 검색과 SEO - 깃 블로그 TIP 14.md
+++ b/_posts/etc/Blog/2024-04-29-(Blog) 블로그 내 글 검색과 SEO - 깃 블로그 TIP 14.md
@@ -16,16 +16,73 @@ typora-root-url: ../../..
 
 **내 글 검색과 SEO 설정 방법 소개**
 
-- 아래 그림의 Search -> "내 글 검색"
-- ![Search](https://github.com/BH946/bh946.github.io/assets/80165014/91047770-13ce-4e45-91f5-23cd9b8379c2)    
+- 아래 그림의 Search 또는 돋보기 -> "내 글 검색"
+- ![검색](https://github.com/BH946/bh946.github.io/assets/80165014/900cdac7-5362-4ab6-80b5-e753f73d3d4f)   
 
 <br><br>
 
 # 내 글 검색
 
+**2가지 방법을 소개한다.** 
 
+<br>
 
+## Search 추가
 
+**상단 네비게이션바를 커스텀하여 "Search" 로 등록하는 방법**
+
+```yml
+# navigation.yml
+main:
+  - title: "Home"
+    url: /
+  - title: "Category"
+    url: /categories/
+  - title: "Search"
+    url: /search/
+```
+
+```yml
+# _config.yml 주석 해제 잘 확인
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
+# https://github.com/jekyll/jekyll-archives
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
+```
+
+```md
+# _pages 하위에 search.md 이름으로 파일 생성하여 아래 코드 작성
+---
+title: Search
+layout: search
+permalink: /search/
+---
+```
+
+<br>
+
+## "돋보기" 추가
+
+`_config.yml` 설정 파일 수정으로 끝내는 방법 -> lunr 사용
+
+```yml
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default) -> 본문 내용까지 확인
+search_provider          : # lunr (default), algolia, google
+```
 
 <br><br>
 
@@ -61,5 +118,52 @@ typora-root-url: ../../..
 
 따라서 Google, Naver 에 sitemap.xml, feed.xml, robot.txt 를 등록하면 해당 사이트에서 검색이 가능하게 된다.
 
-자세한것은 다음 링크를 참고하자. [Google, Naver 등록 과정]()
+자세한것은 다음 링크를 참고하자. [Google, Naver 등록 과정](https://bh946.github.io/knowledge/webprogramming/%EB%8F%84%EB%A9%94%EC%9D%B8-%EB%93%B1%EB%A1%9D,-SEO,-%EA%B5%AC%EA%B8%80-%EC%95%A0%EB%84%90%EB%A6%AC%ED%8B%B1%EC%8A%A4-%EC%82%AC%EC%9A%A9%EB%B2%95/#%EA%B2%80%EC%83%89-%EC%97%94%EC%A7%84)
 
+참고로 RSS 는 위 링크에 정리되지 않았는데 이건 여기서 설명하겠다.
+
+<br><br>
+
+## 번외) RSS 방법
+
+feed.xml 을 아래 코드로 만들어서 sitemap.xml 을 두는 위치(root)에 같이 두면 서버에서 할일은 끝이다.
+
+```xml
+---
+layout: null
+---
+<?xml version="1.0" encoding="UTF-8"?>
+<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
+  {% assign feed_path = "/feed.xml" %} <!-- 피드경로 명시 -->
+  <channel>
+    <title> {{ site.title | xml_escape }}  </title>
+    <description>{{ site.description | xml_escape }}</description>
+    <link>{{ site.url }}{{ site.baseurl }}/</link>
+    <atom:link href="{{ feed_path | prepend: site.baseurl | prepend: site.url }}" rel="self" type="application/rss+xml"/>
+    <pubDate>{{ site.time | date_to_rfc822 }}</pubDate>
+    <lastBuildDate>{{ site.time | date_to_rfc822 }}</lastBuildDate>
+    <generator>Jekyll v{{ jekyll.version }}</generator>
+    {% for post in site.posts limit:10 %}
+      <item>
+        <title>{{ post.title | xml_escape }}</title>
+        <description>{{ post.content | xml_escape }}</description>
+        <pubDate>{{ post.date | date_to_rfc822 }}</pubDate>
+        <link>{{ post.url | prepend: site.baseurl | prepend: site.url }}</link>
+        <guid isPermaLink="true">{{ post.url | prepend: site.baseurl | prepend: site.url }}</guid>
+        {% for tag in post.tags %}
+        <category>{{ tag | xml_escape }}</category>
+        {% endfor %}
+        {% for cat in post.categories %}
+        <category>{{ cat | xml_escape }}</category>
+        {% endfor %}
+      </item>
+    {% endfor %}
+  </channel>
+</rss>
+```
+
+<br>
+
+추가로 Google 의 경우 sitemap 추가했던것처럼 feed 도 추가하면 된다. (아래그림 참고)
+
+![RSS](https://github.com/BH946/bh946.github.io/assets/80165014/7af09c8c-c7d0-48ce-8fdb-c2288048e3be) 
