--- a/_posts/Git_Github/CLI_명령어/2023-07-30-GIT 커밋(작업) 이동 팁, 연습 사이트.md
+++ b/_posts/Git_Github/CLI_명령어/2023-07-30-GIT 커밋(작업) 이동 팁, 연습 사이트.md
@@ -1,6 +1,6 @@
 ---
 title:  "GIT 커밋(작업) 이동 팁, 연습 사이트"
-categories : [Knowledge, Cli_Git]
+categories : [Cli_Git]
 tag : [깃헙, 깃허브, git, github, merge, cherry-pick, rebase, revert, reset, checkout]
 toc: true
 toc_sticky: true
