--- a/_posts/BlockChain/블록체인_특강/2022-07-18-1일차-블록체인(개념).md
+++ b/_posts/BlockChain/블록체인_특강/2022-07-18-1일차-블록체인(개념).md
@@ -1,6 +1,6 @@
 ---
 title: "1일차-블록체인 개념정리"
-categories : BlockChain
+categories : [BlockChain, Knowledge]
 tag : [블록체인]
 toc: true
 toc_sticky: true
