--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -68,13 +68,6 @@ typora-root-url: ../../..
   }
   // 중복조합
   static void combDup(int depth, int idx) {
-    if(depth == M) {
-      // 중복조합 생성 완료
-    }
-    for(int i=1; i<=N; i++) {
-      outArr[depth] = i;
-      comb(depth+1, i); // 이 차이밖에 없음. 한끗차이
-    }
   }
   // 참고) 조합 또다른 방식
   //comb(depth+1, idx+1); // 현재 선택 OK 다음 자리 이동
@@ -311,9 +304,9 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
     if(depth == M) {
       // 중복조합 생성 완료
     }
-    for(int i=1; i<=N; i++) {
+    for(int i=idx; i<=N; i++) {
       outArr[depth] = i;
-      comb(depth+1, i); // 이 차이밖에 없음. 한끗차이
+      combDup(depth+1, i); // 이 차이밖에 없음. 한끗차이
     }
   }
   // 참고) 조합 또다른 방식
