--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -726,3 +726,151 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
 }
 ```
 
+<br><br>
+
+## 출력 예시
+
+**BFS, DFS, 순열, 조합, 부분집합**
+
+```java
+//BFS
+x:0 y:0	
+x:0 y:1	x:1 y:0	
+x:0 y:2	x:1 y:1	x:2 y:0	
+x:0 y:3	x:1 y:2	x:2 y:1	x:3 y:0	
+...
+x:7 y:9	x:8 y:8	x:9 y:7	
+x:8 y:9	x:9 y:8	
+x:9 y:9	
+    
+//순열
+[1, 2, 3, 0]
+[1, 2, 4, 0]
+[1, 2, 5, 0]
+[1, 3, 2, 0]
+[1, 3, 4, 0]
+[1, 3, 5, 0]
+[1, 4, 2, 0]
+[1, 4, 3, 0]
+[1, 4, 5, 0]
+[1, 5, 2, 0]
+[1, 5, 3, 0]
+[1, 5, 4, 0]
+[2, 1, 3, 0]
+[2, 1, 4, 0]
+[2, 1, 5, 0]
+[2, 3, 1, 0]
+[2, 3, 4, 0]
+[2, 3, 5, 0]
+...
+[4, 5, 3, 0]
+[5, 1, 2, 0]
+[5, 1, 3, 0]
+[5, 1, 4, 0]
+[5, 2, 1, 0]
+[5, 2, 3, 0]
+[5, 2, 4, 0]
+[5, 3, 1, 0]
+[5, 3, 2, 0]
+[5, 3, 4, 0]
+[5, 4, 1, 0]
+[5, 4, 2, 0]
+[5, 4, 3, 0]
+
+//중복순열
+[1, 1, 1, 0]
+[1, 1, 2, 0]
+[1, 1, 3, 0]
+[1, 1, 4, 0]
+[1, 1, 5, 0]
+[1, 2, 1, 0]
+[1, 2, 2, 0]
+[1, 2, 3, 0]
+[1, 2, 4, 0]
+[1, 2, 5, 0]
+...
+[5, 3, 5, 0]
+[5, 4, 1, 0]
+[5, 4, 2, 0]
+[5, 4, 3, 0]
+[5, 4, 4, 0]
+[5, 4, 5, 0]
+[5, 5, 1, 0]
+[5, 5, 2, 0]
+[5, 5, 3, 0]
+[5, 5, 4, 0]
+[5, 5, 5, 0]
+    
+//조합
+[1, 2, 3, 0]
+[1, 2, 4, 0]
+[1, 2, 5, 0]
+[1, 3, 4, 0]
+[1, 3, 5, 0]
+[1, 4, 5, 0]
+[2, 3, 4, 0]
+[2, 3, 5, 0]
+[2, 4, 5, 0]
+[3, 4, 5, 0]
+    
+//중복조합
+[1, 1, 1, 0]
+[1, 1, 2, 0]
+[1, 1, 3, 0]
+[1, 1, 4, 0]
+[1, 1, 5, 0]
+[1, 2, 2, 0]
+[1, 2, 3, 0]
+[1, 2, 4, 0]
+[1, 2, 5, 0]
+[1, 3, 3, 0]
+[1, 3, 4, 0]
+[1, 3, 5, 0]
+[1, 4, 4, 0]
+[1, 4, 5, 0]
+[1, 5, 5, 0]
+[2, 2, 2, 0]
+[2, 2, 3, 0]
+[2, 2, 4, 0]
+[2, 2, 5, 0]
+[2, 3, 3, 0]
+...
+[3, 5, 5, 0]
+[4, 4, 4, 0]
+[4, 4, 5, 0]
+[4, 5, 5, 0]
+[5, 5, 5, 0]
+    
+//부분집합
+4 
+3 
+3 4 
+2 
+2 4 
+2 3 
+2 3 4 
+1 
+1 4 
+1 3 
+1 3 4 
+1 2 
+1 2 4 
+1 2 3 
+1 2 3 4 
+0 
+0 4 
+0 3 
+0 3 4 
+0 2 
+0 2 4 
+0 2 3 
+0 2 3 4 
+0 1 
+0 1 4 
+0 1 3 
+0 1 3 4 
+0 1 2 
+0 1 2 4 
+0 1 2 3 
+0 1 2 3 4 
+```
