--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -368,7 +368,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
         for(int i=1; i<=N; i++) {
             if(visited[i]) continue;
             visited[i]=true;
-    		outArr[depth] = i;
+            outArr[depth] = i;
             perm(depth+1);
             visited[i]=false; //backtracking
         }
@@ -379,7 +379,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
             // 중복순열 생성 완료
         }
         for(int i=1; i<=N; i++) {
-    		outArr[depth] = i;
+            outArr[depth] = i;
             perm(depth+1);
         }
     }
@@ -453,8 +453,8 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
         if(depth == M) {
             // 조합 생성 완료
         }
-        for(int i=1; i<=N; i++) {
-    		outArr[depth] = i;
+        for(int i=idx; i<=N; i++) {
+            outArr[depth] = i;
             comb(depth+1, i+1);
         }
     }
@@ -463,8 +463,8 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
         if(depth == M) {
             // 중복조합 생성 완료
         }
-        for(int i=1; i<=N; i++) {
-    		outArr[depth] = i;
+        for(int i=idx; i<=N; i++) {
+            outArr[depth] = i;
             comb(depth+1, i); // 이 차이밖에 없음. 한끗차이
         }
     }
@@ -482,7 +482,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 <br>
 
-**부분집합(=subset) **-> 조합과 유사
+**부분집합(=subset)**-> 조합과 유사
 
 **"있다 or 없다"** 로 경우의 수를 구하면 -> `부분집합`
 
