add: 수치해석 포스팅 수정

--- a/_posts/Major/Numerical_Analysis/2022-06-31-(Python)다항식의 보간법 - 뉴턴, 라그랑주.md
+++ b/_posts/Major/Numerical_Analysis/2022-06-31-(Python)다항식의 보간법 - 뉴턴, 라그랑주.md
@@ -16,15 +16,13 @@ typora-root-url: ../../..
 
 **선형, 비선형 보간법(실제 식을 모르니 보간하는것이다.)**
 
-**다항식의 보간법은 x, y, z... 등등 각 값들을 통해서 다항식을 유추하는 과정을 알아보는것이다.**
+**다항식의 보간법은 x, y, z... 등 각 값들을 통해서 다항식을 유추하는 과정을 알아보는것이다.**
 
 **n=0(차), p(x)=y  
 n=1(차), p(x)=직선방정식 활용 => 선형 보간법  
 n>=2(차) 부터 비선형 보간법 => 뉴턴, 라그랑주 형태 소개**
 
-
-
-
+<br><br>
 
 ### 참고 : 선형 보간법
 
@@ -36,9 +34,7 @@ n>=2(차) 부터 비선형 보간법 => 뉴턴, 라그랑주 형태 소개**
 
 ![image-20220901005011477](/images/2022-06-31-(Python)다항식의 보간법 - 뉴턴, 라그랑주/image-20220901005011477.png)
 
-
-
-
+<br><br>
 
 ### 보간 다항식 : 뉴턴 형태
 
@@ -50,14 +46,16 @@ n>=2(차) 부터 비선형 보간법 => 뉴턴, 라그랑주 형태 소개**
 각각 순서대로 해당 차수의 다항식을 구해나갈 수 있다.
 
 * 예로 p<sub>1</sub>(x) 를 구해보면 -5 + 2x 로 다항식이 나타난다.
+  * 표를보면 p(0)=-5, p(1)=-3 임을 알 수 있고, 공식에 대입을 해보면
+  * p<sub>1</sub>(x)=p<sub>0</sub>(x)+c(x-0)=-5+cx 이다. 여기서 p<sub>1</sub>(1)=-3 을 사용하면 -5+c=-3 -> c=2 가 도출된다.
+  * 최종적으로 p<sub>1</sub>(x)=-5+2x 다항식을 구할 수 있다.
+
 * 이처럼 다항식을 차례로 보간해서 구해 나갈수 있다.
 * 그리고 최종 마지막 다항식을 구했으면 그것이 최종 `보간 다항식`인 것이다.
   * **즉 x와 y의 값만을 가지고 다항식을 보간해서 구해본 과정인 것이다.**
 * 뉴턴 라이브러리는 구글링을 할 것
 
-
-
-
+<br><br>
 
 ### 보간 다항식 : 라그랑주 형태
 
@@ -67,7 +65,16 @@ n>=2(차) 부터 비선형 보간법 => 뉴턴, 라그랑주 형태 소개**
 
 공식은 이것이며, 뉴턴 때 처럼 값 넣어보면 다항식을 계속 구해나갈 수 있다.
 
+**아래사진은 교수님이 풀이해주셨던 모습 중 하나이다.**
 
+- x={0,1,2}, y=f(x)={0,1,8} 의 값이 있을 때 "라그랑주 공식"을 사용하여 "보간 다항식"을 구하는 예시
+- P<sub>2</sub>(x) 를 구하는게 목적이다. 즉, P<sub>2</sub>(x) = l<sub>0</sub>f(x<sub>0</sub>) + l<sub>1</sub>f(x<sub>1</sub>) + l<sub>2</sub>f(x<sub>2</sub>) 구하라.
+  - 이를위해 l<sub>0</sub>(x) ~ l<sub>2</sub>(x) 도 구해줘야 하므로 P(x), l(x) 두가지 공식을 전부 사용 한다.
+- 아래 사진은 참고만하고 직접 공식을 대입하여 풀어보자. 어렵지 않다.
+
+![라그랑주](https://github.com/BH946/bh946.github.io/assets/80165014/5e784af0-2c3c-427f-b6c3-0d9c25c84d85) 
+
+<br>
 
 **활용 가능한 라이브러리를 소개하겠다.**
 
