fix: 포스팅 수정

--- a/_posts/Major/Database/2022-06-21-DB 데이터베이스(관리) 시스템(2).md
+++ b/_posts/Major/Database/2022-06-21-DB 데이터베이스(관리) 시스템(2).md
@@ -118,7 +118,7 @@ sidebar:
   * 절차적 DML("waht+how", precompiler)
   * 비절차적 DML(질의어, "what")
   * **데이터 부속어(DSL)** : host program속 DML, 비절차적이나 절차적 DML
-  * 데이터언어의 완정성은 SQL이 만족
+  * 데이터언어의 완전성은 SQL이 만족
 
 * **데이터 제어어(DCL)** : DB관리 목적으로 DBA(데이터베이스 관리자)가 사용
   * DBA의 의무 : 1. DB 설계와 운영, 2. 행정 및 불평 해결, 3. 시스템 감시 및 성능 분석
