--- a/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
+++ b/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
@@ -59,9 +59,9 @@ sidebar:
 * **값의 집합 + 연산의 집합**
 * **타입 구성자** : 기본 자료형으로부터 더 복잡한 자료형(**복합 타입**)을 구성하는 방법    
   => 배열(같은타입), 리스트(다른타입도 허용), 레코드(예: C의 struct), 공용체(Union),  
-  포인터 타입(예: C의 포인터. 위치(주소)를 값으로 사용하는 특징), 사용자-정의 타입(예: 사용자가 만든 class
+  포인터 타입(예: C의 포인터. 위치(주소)를 값으로 사용하는 특징), 사용자-정의 타입(예: 사용자가 만든 class)
 
-int x; 에서 이 자료형의 의미 : 값 + 연산을 의미  
+**int x;** 에서 이 자료형의 의미 : 값 + 연산을 의미  
 => 값 : 그 타입의 변수가 가질 수 있는 값들의 집합. x ∈ Integer  
 => 연산 : 추가로 그 값에 적용 가능한 연산들의 모음(데이터 타입에 맞게 연산하는지 체크)
 
@@ -79,7 +79,7 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 ### 2. Java의 자료형(기본형, 참조형으로 나뉨)
 
 * **유니코드**는 더 커서 한글도 표현. **boolean**형 타입도 존재
-* **참조 자료형**을 보면 C에서 포인터와 같은 것 같지만 포인터는 연산이 가능해서 메모리에서 직접 값을 변경할 수 있지만 참조 자료형은 불가. 그래서 메모리 해제도 GC가 동작하는 것(가비지 컬렉션)
+* **참조 자료형**을 보면 C의 포인터와 유사해 보이지만 포인터는 연산이 가능해서 메모리에서 직접 값을 변경할 수 있는반면 참조 자료형은 불가. 그래서 메모리 해제도 GC가 동작(가비지 컬렉션)
 
 <br><br>
 
