--- a/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
+++ b/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
@@ -15,6 +15,10 @@ sidebar:
 
 `좌측, 우측 유도`와 `모호성` 구분하고 `좌, 우 결합`과 햇갈리지말고 구분할 것
 
+프로그래밍 언어의 구문 구조를 어떻게 표현할 수 있을까? **재귀를 이용**
+
+이러한 재귀 구조를 자연스럽게 표현하기 위한 문법은? **문맥-자유 문법(CFG)**
+
 <br><br>
 
 ## 정규식
@@ -42,16 +46,19 @@ sidebar:
 `N -> D | ND` : 한자리(D), 두자리이상(ND) 의미 => **구문법**
 
 * 유한한 형태의 방법으로 무한한것을 보여줌.
-  * 숫자가 2자리 이상일시? `N -> ND -> NDD -> NDDD -> ...` 이런식으로 무한한것을 처리할 수 있음.
+  * 숫자가 2자리 이상일시? `N -> ND -> NDD -> NDDD -> ...` 이런ㄴ식으로 무한한것을 처리할 수 있음.
+* 참고 : **구문법**을 활용해서 `V(D), V(ND)`를 십진수 **값을** 구하는 공식으로 정의해두면 => **의미론**
+  * **십진수 - 구문법(왼쪽)과 의미론(오른쪽) 예시**
+  * <img src="https://github.com/BH946/bh946.github.io/assets/80165014/2a11d1bc-80f1-4dcf-8409-bf7ba9aca82f" alt="십진수" style="zoom:50%;" /> 
 
-* 참고 : 구문법을 활용해서 `V(D), V(ND)`를 십진수 **값을** 구하는 공식으로 정의해두면 => **의미론**
-* **문맥-자유 문법 CFG**
-  * 시작 심볼 : N
-    * 논터미널(끝X)
-  * 생성규칙 왼쪽 : D
-    * 논터미널(끝X)
-  * 생성규칙 오른쪽 : ND
-    * 논터미널+터미널
+* **문맥-자유 문법 CFG(=Context-free grammar)**
+  * 터미널 심볼의 집합 T
+  * 논터미널 심볼의 집합 N
+  * 시작 심볼 S (논터미널 심볼 중에 하나)
+  * 다음과 같은 형태의 생성(문법) 규칙들의 집합 
+    * X → Y1 Y2... Yn 여기서 X ∊  N 그리고 Yi ∊  T ∪N 
+    * X → ε  (오른쪽이 빈 스트링인 경우)
+  * 보통 논터미널(nonterminal) 심볼은 대문자로, 터미널(terminal) 심볼은 소문자로 표기한다.
 
 <br><br>
 
@@ -59,8 +66,11 @@ sidebar:
 
 **논터미널이 없을때까지 시작 심볼부터 생성규칙에 맞게 계속 반복**
 
-* 생성 규칙을 여러번 적용하는 유도는 화살표뒤에 *이 붙어있다.
-* 생성 규칙 한번 적용은 그냥 화살표 하나(직접유도)
+- 예시로 `S → aS | b` 일때?
+  - S => aS => aaS => aaaS => aaab
+
+* 생성 규칙을 여러번 적용하는 유도는 화살표뒤에 `*`이 붙어있다.
+* 생성 규칙 한번 적용은 그냥 `화살표 하나`(직접유도)
 
 * **좌측 유도** : 가장 왼쪽 논터미널 선택
 * **우측 유도** : 가장 오른쪽 논터미널 선택
@@ -79,15 +89,19 @@ sidebar:
 
 **2개이상의 좌측(우측) 유도, 파스트리를 가짐. 즉, 3+(2\*3), (3+2)*3 같은 단점 발생**
 
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/fbc23441-479d-4e8d-bb44-100403713d1b" alt="모호한문법" style="zoom: 67%;" /> 
+
 * 예시로 아래 CFG 이고, **3+4*5** 를 유도 하는 경우  
   E -> E\*E  
   	| E+E  
   	| (E)  
-  	| N
-  * E => E+E => N+E =><sup>\*</sup> 3+4\*5  
+  	| N  
+  N →  N D | D
+  D →  0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
+  * E => E+E => N+E => D+E => 3+E =><sup>\*</sup> 3+4\*5  
     E => E\*E => E+E\*E =><sup>\*</sup> 3+4\*5
-  * 2개의 좌측 유도를 가짐
-  * 우선수위로 모호성 해결
+  * **2개의 좌측 유도를 가짐 (좌측,우측)**
+  * 우선순위로 모호성 해결
 * 예시로 아래 CFG 이고, **if e1 then if e2 then s1 else s2** 를 유도 하는 경우  
   S -> if E then S  
       | if E then S else S
@@ -119,21 +133,37 @@ sidebar:
 
 ## BNF, EBNF
 
-BNF 사용 기호
+**BNF(Backus-Naur Form)**
 
-* `::=` : 정의
-* `|` : 또는(택일)
-* `<>` : 비단말
-  * 예 : \<expr> -> \<term>  
-    					 | \<expr> + \<term>
+- BNF 사용 기호
+
+  * `::=` : 정의
+  * `|` : 또는(택일)
+  * `<>` : 비단말(종료X)
+    * 예 : \<expr> -> \<term>  
+       | \<expr> + \<term>
+
+- ```
+  <expr> →  <expr> + <term> | <term> 
+  <term> →  <term> * <factor> | <factor> 
+  <factor> →  number | (<expr>)
+  ```
 
 <br>
 
-EBNF 사용 기호(BNF에 추가)
+**EBNF(Extended BNF)**
 
-* `[]` : 0 or 1번
-* `{}` : 0번 이상
-* `()` : 한정된 범위의 택일(`|` 또는 과 함께 쓰임)
-* `''` : '(' 처럼 메타 기호를 단말 기호로 사용
-  * 예 : \<expr> -> \<term>  { + \<term> }
+- EBNF 사용 기호(BNF에 추가)
+
+  * `[]` : 0 or 1번
+  * `{}` : 0번 이상
+  * `()` : 한정된 범위의 택일(`|` 또는 과 함께 쓰임)
+  * `''` : '(' 처럼 메타 기호를 단말 기호로 사용
+    * 예 : \<expr> -> \<term>  { + \<term> }
+
+- ```
+  <expr> →  <term> {+ <term>} 
+  <term> →  <factor> {* <factor>} 
+  <factor> →  number | (<expr>)
+  ```
 
