--- a/_posts/Major/Programming_Language/2022-08-22-PL 타입시스템(4).md
+++ b/_posts/Major/Programming_Language/2022-08-22-PL 타입시스템(4).md
@@ -102,25 +102,26 @@ sidebar:
 
 ## 언어 S의 타입 시스템
 
+**언어S의 생김새** -> 언어S는 임의로 만든 언어
+
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/de93028b-1180-4d01-bf1c-2ef3dee94ab9" alt="image" style="zoom: 67%;" /> 
+
+<br>
+
 **타입 환경 : 각 지점에서 유효한 변수들의 타입 정보를 유지**
 
 **타입 검사기 구현 – 입력 프로그램의 AST를 순회하면서 Stmt와 Expr을 만날 때마다 구현**
 
 **타입검사 규칙들**
 
-* 사칙연산 – 타입 INT => 반환 INT
+* 사칙연산 : 사용타입 INT => 반환타입 INT
+* 관계연산 : 사용타입 동일 => 반환타입 BOOL
+* 대입문 : 사용타입 동일 => 반환타입 VOID
+* 조건문 : BOOL(expr 조건문), 동일(stmt1,2 몸체) 
+  * if, else라서 stmt1,2 => 반환타입 stmt
 
-* 관계연산 – 타입 동일 => 반환 BOOL
-
-* 대입문 – 타입 동일 => 반환 VOID
-
-* 조건문 – BOOL(expr), 동일(stmt1,2). 참고) if, else라서 stmt1,2 => 반환 stmt타입으로
-
-* 반복문 – BOOL(expr), VOID(stmt) => 반환 VOID
-
-* let문 – 선언문 타입, 본문(stmt)타입 사용 => 반환 stmt타입으로
-
-참고 : 언어 S는 임의로 만든 언어
+* 반복문 : BOOL(expr), VOID(stmt) => 반환타입 VOID
+* let문 : 선언문 타입, 본문(stmt)타입 사용 => 반환타입 stmt
 
 <br><br>
 
