--- a/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
+++ b/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
@@ -109,13 +109,14 @@ sidebar:
 **순수 관계 연산자**
 
 * `실렉트(σ)` : 선택 조건을 만족하는 릴레이션의 수평적 부분집합(특정 행 선택)
-
 * `프로젝트(π)` : 릴레이션의 수직적 부분집합(특정 열 선택)
-
 * `조인(⋈)(세타 조인)` : 세타(=연산기호)에 따른 조인(말 그대로 사용한 연산기호와 맞게 조인)
   * 동일 조인(=(열비교)), 자연 조인(=, 중복제거(열))
+* `디비전(÷)` : R÷S＝{ t | t∈ π<sub>D</sub>(R) ∧ t · s∈R  for all s∈S }
+  * D=X-Y이다. 모든 S에 대해서 R에 모든 S에 대한 t가 있어야 한다.
+  * {학번,과목번호} 릴레이션을 SC라 했을때 과목번호 C413을 포함하는 학번을 구하라하면?
+  * SC ÷ C413 으로 보면 되고, 실제로 C413 과목번호를 가진 학번들이 출력된다.
 
-* `디비전(÷)` : `R÷S＝{ t | t∈ π<sub>D</sub>(R) ∧ t · s∈R  for all s∈S }`
 
 <br>
 
@@ -151,6 +152,7 @@ sidebar:
   * π<sub>담당교수</sub>(σ<sub>과목이름='화일구조'</sub>(과목))
 * 모든 과목에 수강한 학생의 ‘학번’과 ‘이름’을 검색하라 
   * π<sub>학번,이름</sub>((π<sub>학번,과목번호</sub>(등록) ÷ π<sub>과목번호</sub>(과목)) ⋈<sub>N</sub>학생) 
+  * "모든"이 들어간 쿼리에 디비전을 주로 사용
 * ‘학번’이 600, ‘이름’이 '김영호', ‘학년’이 4, ‘학과’가 ‘컴퓨터’인 학생을 삽입하라.
   * 학생∪{<600, '김영호', 4, ‘컴퓨터’>}
 * '데이터베이스‘ 과목을 삭제하라.
