fix: 포스팅 오타수정

--- a/_posts/Major/Algorithm_Concept/2022-02-04-(C++)부호와 크기, 1의 보수, 2의 보수(+GUI(Qt)활용).md
+++ b/_posts/Major/Algorithm_Concept/2022-02-04-(C++)부호와 크기, 1의 보수, 2의 보수(+GUI(Qt)활용).md
@@ -19,12 +19,26 @@ sidebar:
 
 <br>
 
+**부호와 크기, 1의 보수, 2의 보수 변환 예시** 
+
+**"음의 정수" 즉, "보수" 구하는 3가지 방법 (ex:-4)**
+
+1. 양수값을 8비트로 표현 : 00000100
+2. 부호와 크기 방식으로 표현 : 10000100
+   - 첫번째 bit는 부호bit 로써 0이면 "양수", 1이면 "음수"로 표현
+3. 1의 보수 형태 : 11111011
+   - 0을 1로, 1을 0으로 변환해서 표현 -> 부호bit 빼고
+4. 2의 보수 형태 : 11111100
+   - 1의 보수에 1더해서 표현
+
+<br>
+
 #### 출력화면
 
 * 8bit로 설정후 숫자 입력한 상황 (종료는 q입력시 종료)
 
 ```python
-# 숫자 입력 : 4
+# 숫자 입력 : 4 -> 양수는 보수 구하는게 아니니까 그대로 출력나오는 것
 부호와 크기 형태 : 00000100
 1의 보수 형태 : 00000100
 2의 보수 형태 : 00000100
