fix: 게시물 수정

--- a/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
@@ -48,7 +48,7 @@ typora-root-url: ../../..
     즉, 삽입했을때 바로앞과 비교하고 비교한거의 앞에것들도 다 비교해야한다는 것
   * **버블정렬** : 2개씩 비교하면서 작은걸 앞으로 옮기면서 한바퀴 지나면 제일 큰게 제일 뒤로 감  
     이때, **제일 뒤**로간 이 숫자를 제외하고 다시 반복하는 구조
-  * **선택정렬 **: 교환정렬과 차이는 조건에 맞으면 따로 기억을 했다가 마지막에 swap을 하는 구조  
+  * **선택정렬**: 교환정렬과 차이는 조건에 맞으면 따로 기억을 했다가 마지막에 swap을 하는 구조  
     바퀴마다 **맨 앞자리**가 옳게 채워지므로 이 숫자를 제외하고 다음 바퀴를 반복하는 구조
   * **교환정렬** : 선택정렬과 차이는 매번 조건에 맞으면 swap을 하는 구조  
     바퀴마다 **맨 앞자리**가 옳게 채워지므로 이 숫자를 제외하고 다음 바퀴를 반복하는 구조
@@ -173,7 +173,7 @@ typora-root-url: ../../..
   * **15** 22 13 27 12 10 20 25 -> **15 13 12 10** 22 27 20 25 -> **10** 13 12 **15** 22 27 20 25
     * 처음에선 **15**가 pivotpoint로 시작한것이고,   
       pivotpoint는 index니까 pivotitem에 해당 index의 값을 저장해서 활용한다.
-    * 두번째에선 아래 코드에서 for문을 다 수행한 수간의 모습이다.
+    * 두번째에선 아래 코드에서 for문을 다 수행한 순간의 모습이다.
     * 세번째에선 아래 코드를 마지막까지 수행한 모습이며,   
       이때 pivotpoint가 중간인 mid위치의 index를 가지게 된다.  
       => 이덕분에 quicksort함수에서 mid처럼 사용하는 것이다.
