fix: 게시물 수정

--- a/_posts/Major/Algorithm_Concept/2022-12-31-(개념) 행렬곱셈(쉬트라쎈).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-31-(개념) 행렬곱셈(쉬트라쎈).md
@@ -36,7 +36,7 @@ typora-root-url: ../../..
 
 ## 쉬트라쎈의 알고리즘
 
-**여기선 개념과 동작방식만 참고하고 실제로 구글링을 하면 코드가 많아서 같이 참고할 것**
+**여기선 개념과 동작방식만 참고하고 실제 구현코드는 구글링을 통해서 참고할 것**
 
 <img src="/images/2022-12-31-(개념) 행렬곱셈(쉬트라쎈)/image-20221228194422555.png" alt="image-20221228194422555" style="zoom:80%;" />
 
@@ -45,7 +45,7 @@ typora-root-url: ../../..
 
 <br>
 
-**코드의 구조는?**
+**수도코드**
 
 ```
 void strassen(~~) {
