--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -46,6 +46,8 @@ typora-root-url: ../../..
   - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지??
   - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
     - **DP, 그리디**를 함께 고려하면 좋은데 그리디는 "반례가없다"를 증명하는것이 어려워서 "확신"이 없으면 PASS 하는것을 추천
+    - 참고로 **그리디 유형**에 우리가 아는 알고리즘이 많다.
+      - 프림, 크루스칼, 다익스트라, 플로이드, 힙 등
   - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
     - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
   - **"그래프"**, 트리 종류 같다면?? 아래 필수 고려(+BFS, DFS)
@@ -1823,6 +1825,9 @@ static int dfs(int x, int y){
 * **연쇄 행렬곱셈(BOJ11049)**
   * **M\[i][j] = <img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230609172128684.png" alt="image-20230609172128684" style="zoom: 80%;" />	,if i<j**
   * **M\[i][j] = 0	,if i==j**
+  * **추천(응용) 문제 : [파일 합치기_BOJ11066](https://www.acmicpc.net/problem/11066)**
+    * 연쇄 행렬곱셈처럼 로직은 동일하다.
+    * 차이점은 BOJ11066 문제의 점화식에 "결합비용" 부분은 행렬이 아니다보니 다른 값을 사용해야 한다.
   
 * **LCS(BOJ6251)**
   * `C[i][j] = max( C[i-1][j], C[i][j-1] )	,if A[i]!=B[j]`  
@@ -1854,7 +1859,7 @@ static int dfs(int x, int y){
   * <img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/DRW00000bc84efc.gif" alt="img"  /> 
   * ''키''의 검색 빈도수(즉, 확률)를 받아서 BST의 최적인 트리를 구하는 것
     * WHY? 빈도수 높은 키값이 루트와 가까울수록 더욱 효율적이기 때문에 사용!
-    * 다만, 이와 해당된 문제를 풀어본적이 없어서 **그냥 개념만 이해하고 넘어간다.**
+    * [자세한 개념은 이곳에서](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#obstoptimal-binary-search-tree)
 
 * **0-1 Knapsack(BOJ12865)**
   
@@ -1878,10 +1883,11 @@ static int dfs(int x, int y){
   * "바둑돌 가져가기, coin move game" 는 확실히 이해하는것을 권장
 
 * **제한된 비트 스트링의 개수**
+  
   * `S[k] = S[k-1] + S[k-2]`
   * 이건 너무 쉬운 풀이인데, 비트 스트링 개수 세는 아이디어는 기록하면 좋을듯 해서
   * **참고 : [제한된 비트 스트링의 개수](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%A0%9C%ED%95%9C%EB%90%9C-%EB%B9%84%ED%8A%B8-%EC%8A%A4%ED%8A%B8%EB%A7%81%EC%9D%98-%EA%B0%9C%EC%88%98)**
-
+  
 * **최대 공백 정사각형(SWEA4062)**
   * `LES[x][y] = min( LES[x-1][y-1], LES[x][y-1], LES[x-1][y] ) + 1`  
     `LES[x][y] = 1	if 첫번째 행or열이 비었을때`  
