--- a/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 
 <br><br>
 
-## 문제 1
+## 문제 1 - like
 
 * **[특정 옵션이 포함된 자동차 리스트 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/157343)**
 
@@ -40,7 +40,7 @@ SELECT * from CAR_RENTAL_COMPANY_CAR where options like '%네비게이션%' orde
 
 <br><br>
 
-## 문제 2
+## 문제 2 - round, avg, as
 
 * **[평균 일일 대여 요금 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/151136)**
 
@@ -73,7 +73,7 @@ SELECT round(avg(daily_fee),0) as 'AVERAGE_FEE' from CAR_RENTAL_COMPANY_CAR wher
 
 <br><br>
 
-## 문제 3
+## 문제 3 - is null
 
 * **[나이 정보가 없는 회원 수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/131528)**
 
@@ -93,5 +93,28 @@ SELECT count(*) as 'users' from user_info where age is null;
 
 * `count(*)` 는 조건에 맞는 튜플들 개수를 전부 구해준다.
 * `where age is null` 은 `where age = null` 로 이해하면 되며, SQL에서는 `is null` 로 표기해야 하기 때문에 `is null` 을 사용한다.
+
+<br><br>
+
+## 문제 4 - bit 연산자
+
+* **[특정 형질을 가지는 대장균 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/301646)**
+
+<br>
+
+### 코드
+
+```mysql
+select count(*) as count from ecoli_data where (genotype & 1 or genotype & 4) and not genotype & 2;
+```
+
+<br>
+
+### 풀이
+
+`genotype & 4` 처럼 bit 연산자 `&` 를 이해하면 충분
+
+- 1,2,4,8 은 각각 0001, 0010, 0100, 1000 인 2진수 이며 AND연산자(&) 를 통해 문제에서 원하는 형질을 비교할 수 있다.
+- [bit 연산](https://www.tcpschool.com/mysql/mysql_operator_bitwise)
 
 <br><br>
